# whois-president-backend

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: rust.yml
generate-domains/: Cargo.toml
generate-domains/src/: lib.rs  main.rs
init-db/: create-index.js  init-db.sh
init-db/data/: persons.csv  potential-candidates.json
lookup/: Cargo.toml  servers.json
lookup/src/: fib.rs  lib.rs  main.rs
mongo-model/: Cargo.toml
mongo-model/src/: lib.rs
rest-api/: Cargo.toml
rest-api/src/: lib.rs  main.rs  resources.rs  services.rs
whois-response-parser/: Cargo.toml
whois-response-parser/responses/afilias/: entries.txt
whois-response-parser/responses/afnic/: entries.txt  no_entries.txt  too_many_requests.txt
whois-response-parser/src/: afilias.rs  afnic.rs  lib.rs
