[package]
name = "generate-domains"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.16"
mongodb = "2.0.0-beta.3"
regex = "1.5.4"
serde = { version = "1", features = ["derive"] }
tokio = "1"
unidecode = "0.3.0"