[package]
name = "lookup"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
env_logger = "0.9.0"
futures-util = "0.3.16"
log = "0.4.14"
mongodb = "2.0.0-beta.3"
mongo-model = { path = "../mongo-model" }
serde = { version = "1.0", features = ["derive"] }
tokio = "1"
whois-response-parser = { path = "../whois-response-parser" }
whois-rust = "1.3.2"
