[package]
name = "mongo-model"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
mongodb = "2.0.0-beta.3"
serde = { version = "1.0", features = ["derive"] }
whois-response-parser = { path = "../whois-response-parser" }