[package]
name = "rest-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Version 4 because actix uses Tokio under 1
actix-web = "4.0.0-beta.8"
futures-util = "0.3.16"
mongo-model = { path = "../mongo-model" }
mongodb = "2.0.0-beta.3"
serde = { version = "1.0", features = ["derive"] }